--- a/Styles.css
+++ b/Styles.css
@@ -2,3 +2,28 @@ sticky {
     top: 0;
     position: sticky;
 }
+ul{
+    text-align: right;
+}
+li a{
+    
+font-family: Arial, Helvetica, sans-serif;
+text-decoration: none;
+font-size: 22px;
+color: black;
+padding: 25px;
+transition-duration: 1s;
+padding-top: 50px;
+
+
+}
+
+li a:hover{
+    font-size: 40px;
+    transition-duration: 2s;
+    
+}
+ul{
+    list-style: none;
+
+}
