--- a/Styles.css
+++ b/Styles.css
@@ -1,4 +1,4 @@
-sticky {
+.sticky {
     top: 0;
     position: sticky;
 }
@@ -6,7 +6,7 @@ ul{
     text-align: right;
 }
 li a{
-    
+    align-items: top;
 font-family: Arial, Helvetica, sans-serif;
 text-decoration: none;
 font-size: 22px;
@@ -24,6 +24,7 @@ li a:hover{
     
 }
 ul{
+    align-items: top;
     list-style: none;
     background: none;
 
