--- a/Styles.css
+++ b/Styles.css
@@ -33,6 +33,7 @@ ul{
 header {
     font-size: 30px;
     font-weight: 1500;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 text { font-family: Arial, Helvetica, sans-serif;}
