--- a/Styles.css
+++ b/Styles.css
@@ -30,10 +30,17 @@ ul{
 
 }
 
-header {
+.header {
     font-size: 30px;
     font-weight: 1500;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 html * { font-family: Arial, Helvetica, sans-serif !important;}
+
+nav {
+    font-size: 15px;
+    font-weight: 1200;
+    text-align: center;
+}
