--- a/Styles.css
+++ b/Styles.css
@@ -2,9 +2,8 @@
     top: 0;
     position: sticky;
 }
-ul{
-    text-align: right;
-}
+
+
 li a{
     align-items: top;
 font-family: Arial, Helvetica, sans-serif;
@@ -64,4 +63,10 @@ nav {
     font-size: 50px;
     margin-left: 10%;
     margin-top: 25%;
+}
+
+.logo{
+    width: 10%;
+    height: 10%;
+    
 }
