--- a/Styles.css
+++ b/Styles.css
@@ -59,11 +59,22 @@ nav {
 
 .contactlogo{
     display: flex;
-    justify-content: center;
+   justify-content: space-around;
+    border: 5px solid; color: #000; padding: 3%; margin: 3%;
 }
 
 .contactusmain {
         padding: 5%;
         margin: 3%;
-        background-color: aqua;
+        background-color: rgba(132,218,243,255);
+}
+
+.tekstcontactus {
+display: flex;
+justify-content: center;
+}
+
+.tekstcontactus2 {
+    display: flex;
+    justify-content: center;
 }
