--- a/Styles.css
+++ b/Styles.css
@@ -64,26 +64,26 @@ nav {
 .contactlogo{
     display: flex;
    justify-content: space-around;
-    border: 5px solid; color: #000; padding: 3%; margin: 3%;
+   
 }
 
-.contactusmain {
-        padding: 5%;
-        margin: 3%;
-<<<<<<< HEAD
-        background-color: rgba(132,218,243,255);
+.contactusmain1 {
+display: flex;
+justify-content: center;
+border: 5px solid; color: #000; padding: 3%; margin: 3%;
 }
 
 .tekstcontactus {
 display: flex;
 justify-content: center;
+border: 5px solid; color: #000; padding: 3%; margin: 3%;
 }
 
 .tekstcontactus2 {
     display: flex;
     justify-content: center;
-=======
-        background-color: aqua;
+    border: 5px solid; color: #000; padding: 3%; margin: 3%;
+  
 }
 
 .logo {
@@ -97,5 +97,4 @@ justify-content: center;
     width: 50%;
     height: 10%;
     font-size: 40;
->>>>>>> e91a5027a9f541c7f9d8bf03a4e306de938ef311
 }
