--- a/Styles.css
+++ b/Styles.css
@@ -92,7 +92,7 @@ border: 5px solid; color: #000; padding: 3%; margin: 3%;
 }
 
 .HomepageText {
-    margin-top: 15%;
+    margin-top: 10%;
     margin-left: 15%;
     width: 25%;
     height: 10%;
@@ -104,4 +104,9 @@ border: 5px solid; color: #000; padding: 3%; margin: 3%;
 .HomepageText2 {
     background: none !important;
     
+}
+
+#Shopnow {
+    width: 50%;
+    height: 100%;
 }
