--- a/Styles.css
+++ b/Styles.css
@@ -41,8 +41,8 @@ ul{
 }
 
 .header {
-    font-size: 60px;
-    font-weight: 3000;
+    font-size: 80px;
+    font-weight: 4000;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -71,19 +71,8 @@ nav {
 display: flex;
 justify-content: center;
 border: 5px solid; color: #000; padding: 3%; margin: 3%;
-}
-
-.tekstcontactus {
-display: flex;
-justify-content: center;
-border: 5px solid; color: #000; padding: 3%; margin: 3%;
-}
-
-.tekstcontactus2 {
-    display: flex;
-    justify-content: center;
-    border: 5px solid; color: #000; padding: 3%; margin: 3%;
-  
+color: rgb(0, 0, 0);
+font-size: 80px;
 }
 
 .logo {
