--- a/Styles.css
+++ b/Styles.css
@@ -109,5 +109,13 @@ color: rgb(0, 0, 0);
 
 .Product {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
+    width: 25%;
+    text-align: justify;
+    flex-flow: column;
+    text-align: center;
+    border: #000 solid;
+    margin: 5px ;
+    padding: 5px ;
 }
+
