--- a/Styles.css
+++ b/Styles.css
@@ -130,6 +130,11 @@ height: 560px;
     background-color: white;
 }
 .footer {
-    display: flex;
-    align-items: flex-end;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
 }
