--- a/Styles.css
+++ b/Styles.css
@@ -146,3 +146,7 @@ height: 560px;
 
 .donuttext { font-size: 35px;
     font-weight: bolder;}
+
+    .deal {
+        background-color: white;
+    }
