--- a/Styles.css
+++ b/Styles.css
@@ -159,18 +159,21 @@ height: 560px;
 .Productpagedonut {
 font-size: 50px;
 font-weight: bold;
-margin: 3%;
+margin-left: 7%;
+margin-top: 3%;
+margin-bottom: 4%;
 
 
 }
 .Productpagedonuttext {
-    font-size: 50px;
+    font-size: 70px;
     font-weight: bold;
     display: inline-flex;
-   margin-right: 30%;
+   margin-right: 20%;
    margin-top: 10%;
    float: right;
    flex-flow: column;
-
+    width: 30%;
+    
     }
     
