--- a/Styles.css
+++ b/Styles.css
@@ -178,7 +178,7 @@ nav {
     background-repeat: no-repeat;
 }
 
-.Productpagetext2 {
+#Productpagedescription {
     font-size: 25px;
     font-weight: 100;
 }
