--- a/Styles.css
+++ b/Styles.css
@@ -196,3 +196,9 @@ ul{
     font-size: 50px;
     font-weight: 600;  
 }
+
+.AddtoCart{
+    width: 72%;
+    margin-top: -3%;
+    margin-left: -10%;
+}
